test/test_suite/errors/optional_expr_list.c3t
// #target: macos-x64
module test;

fn void main()
{
	int? n;
	for (n += 1, 1 + 1; false;);
}

/* #expect: test.ll

define void @test.main() #0 {
entry:
  %n = alloca i32, align 4
  %n.f = alloca i64, align 8
  store i64 0, ptr %n.f, align 8
  store i32 0, ptr %n, align 4
  %optval = load i64, ptr %n.f, align 8
  %not_err = icmp eq i64 %optval, 0
  %0 = call i1 @llvm.expect.i1(i1 %not_err, i1 true)
  br i1 %0, label %after_check, label %voiderr

after_check:                                      ; preds = %entry
  %1 = load i32, ptr %n, align 4
  %add = add i32 %1, 1
  store i32 %add, ptr %n, align 4
  br label %voiderr

voiderr:                                          ; preds = %after_check, %entry
  ret void
}
